tests/ui/rename/rename_enable.stderr
error: unexpected field `rename`
 --> $DIR/rename_enable.rs:4:20
  |
4 | #[shorthand(enable(rename))]
  |                    ^^^^^^
