tests/ui/rename/rename_enable.rs
use shorthand::ShortHand;

#[derive(ShortHand)]
#[shorthand(enable(rename))]
struct Command {
    value: String,
}

fn main() {}
